<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	android:id="@+id/RelativeLayout01" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	>
	
	<TextView
		android:id="@+id/tvCurrentInt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/currentInt"
		android:lines="2" android:gravity="center_vertical"
		android:layout_alignParentTop="true" android:textSize="20dp"
		>
	</TextView>
	
	<ImageView
		android:id="@+id/ivCI"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/tvCurrentInt"
		>
	</ImageView>
	
	<TextView
		android:id="@+id/tvCurrentPolicy"
		android:layout_below="@+id/ivCI"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/currentPolicy" android:layout_alignLeft="@+id/tvCurrentInt"
		android:lines="2" android:gravity="center_vertical"
		android:layout_alignRight="@+id/tvCurrentInt"
		android:clickable="true" android:onClick="myClickHandler"
		android:textSize="20dp"
		>
	</TextView>
	
	<ImageView
		android:id="@+id/ivPol1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/tvCurrentPolicy"
		>
	</ImageView>

	<ImageView
		android:id="@+id/ivPol2"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="10dip" android:layout_toRightOf="@+id/ivPol1" 
		android:layout_alignTop="@+id/ivPol1" android:layout_alignBottom="@+id/ivPol1"
		>
	</ImageView>

	<ImageView
		android:id="@+id/ivPol3"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="10dip" android:layout_toRightOf="@+id/ivPol2"
		android:layout_alignTop="@+id/ivPol2" android:layout_alignBottom="@+id/ivPol2"
		>
	</ImageView>
	
	
	<TextView
		android:id="@+id/tvStoredPolicy"
		android:layout_below="@+id/ivPol1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/storedPolicy" android:layout_alignLeft="@+id/tvCurrentPolicy"
		android:lines="2" android:gravity="center_vertical"
		android:layout_alignRight="@+id/tvCurrentPolicy"  android:textSize="20dp"
		>
	</TextView>

	<ImageView
		android:id="@+id/ivSP1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/tvStoredPolicy"
		>
	</ImageView>
	
	<ImageView
		android:id="@+id/ivSP2"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="10dip" android:layout_toRightOf="@+id/ivSP1"
		android:layout_alignTop="@+id/ivSP1" android:layout_alignBottom="@+id/ivSP1"
		>
	</ImageView>
	
	<ImageView
		android:id="@+id/ivSP3"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="10dip" android:layout_toRightOf="@+id/ivSP2"
		android:layout_alignTop="@+id/ivSP2" android:layout_alignBottom="@+id/ivSP2"
		>
	</ImageView>

	<Button
		android:id="@+id/btnAdvanced"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:text="@string/advancedSetting" android:layout_alignParentBottom="true"
		android:onClick="myClickHandler"
		>
	</Button>
</RelativeLayout>
